# derby_bet

./: .gitignore  README.md  pyproject.toml  simulate_race.py
derby_bet/: __init__.py
derby_bet/src/: app.py
derby_bet/src/assets/css/: style.css
derby_bet/src/core/: app_manager.py  data_validation.py  payout_calculator.py  player_manager.py  pool_manager.py  race_manager.py  transaction_manager.py  wager_state.py  wager_validation.py
derby_bet/src/managers/: race_manager.py
derby_bet/src/static/css/: style.css
derby_bet/src/static/js/: src.js
derby_bet/src/templates/: index.html
derby_bet/src/utils/: google_api.py  io_tools.py  log_utils.py  wager_state.py
drb/races/: races_data.json
src/static/js/: src.js
src/utils/: google_api.py  log_utils.py
